lang.bnf
#  SYNTAX::
#    [] - optional
#    {} - zero or more repetitions
#    () - grouping
#    |  - alternatives
#    <name> - non-terminal symbol
#    NAME - terminal symbol (token)
#
#  KEYWORDS:
#    FN, IF, ELSE, WHILE, FOR, RETURN, BREAK, CONTINUE, CONST, 
#    PUB, IMPORT, ALIAS, DEFER, STRUCT, AS, TRUE, FALSE, VOID
#  
#  OPERATORS & SYMBOLS:
#    ASSIGN (=), PLUS_EQ (+=), MINUS_EQ (-=), STAR_EQ (*=), SLASH_EQ (/=), PERCENT_EQ (%=)
#    PLUS (+), MINUS (-), STAR (*), SLASH (/), PERCENT (%)
#    EQ_EQ (==), BANG_EQ (!=), LT (<), GT (>), LT_EQ (<=), GT_EQ (>=)
#    AND_AND (&&), OR_OR (||)
#    BANG (!), AMP (&)
#    PLUSPLUS (++), MINUSMINUS (--)
#    LPAREN ( ( ), RPAREN ( ) ), L_BRACE ({), R_BRACE (}), L_SQB ([), R_SQB (])
#    COMMA (,), SEMICOLON (;), COLON (:), ARROW (->), DOT (.), AT (@)
#
#  LITERALS:
#    INTEGER, FLOAT, STRING_LIT, CHAR_LIT, IDENTIFIER, BOOLEAN (TRUE/FALSE)
#
#  TYPES:
#    I32, I64, BOOL, F32, F64, STRING, CHAR, VOID


<Program> ::= { <TopLevelDecl> }

<TopLevelDecl> ::= [ <Attribute> ] [ PUB ] ( <FunctionDecl> | <StructDecl> | <ImplDecl> | <VariableDeclStmt> | <ImportDecl> | <AliasDecl> )

<Attribute> ::= AT IDENTIFIER LPAREN STRING_LIT RPAREN

<ImportDecl> ::= IMPORT ( { DOT } | [ AT ] ) <Path> [ L_BRACE <ImportSymbols> R_BRACE ] [ ALIAS IDENTIFIER ] SEMICOLON
<ImportSymbols> ::= <ImportSymbol> { COMMA <ImportSymbol> }
<ImportSymbol> ::= IDENTIFIER [ ALIAS IDENTIFIER ]

<AliasDecl> ::= ALIAS IDENTIFIER ASSIGN <Type> SEMICOLON

<StructDecl> ::= STRUCT IDENTIFIER [ LT <TypeParams> GT ] L_BRACE { IDENTIFIER COLON <Type> SEMICOLON } R_BRACE

<ImplDecl> ::= IMPL [ LT <TypeParams> GT ] <Type> L_BRACE { <FunctionDecl> } R_BRACE

<FunctionDecl> ::= FN IDENTIFIER [ LT <TypeParams> GT ] LPAREN [ <ParamList> ] RPAREN [ ARROW <Type> ] <Block>

<TypeParams> ::= IDENTIFIER { COMMA IDENTIFIER }

<ParamList> ::= <Param> { COMMA <Param> }
<Param>     ::= [ CONST ] IDENTIFIER COLON <Type>

<VariableDecl> ::= [ CONST ] IDENTIFIER COLON <Type> [ ASSIGN ( <Expression> | <InitializerList> ) ] 
<VariableDeclStmt> ::= <VariableDecl> SEMICOLON

<InitializerList> ::= L_BRACE [ <InitElements> ] R_BRACE
<InitElements> ::= <InitElement> { COMMA <InitElement> } [ COMMA ]
<InitElement> ::= <Expression> | <InitializerList>

<Statement> ::= <Block>        | <IfStmt> 
              | <WhileStmt>    | <ForStmt> 
              | <ReturnStmt>   | <BreakStmt> 
              | <ContinueStmt> | <DeferStmt>
              | <VariableDeclStmt> 
              | <ExprStmt>     

<Block> ::= L_BRACE { <Statement> } R_BRACE

<DeferStmt> ::= DEFER ( <Block> | <Statement> )

<IfStmt> ::= IF <Expression> <Block> [ ELSE ( <Block> | <IfStmt> ) ]

<WhileStmt> ::= WHILE <Expression> <Block>

<ForStmt> ::= FOR LPAREN [ <Statement> ] SEMICOLON [ <Expression> ] SEMICOLON [ <Expression> ] RPAREN <Block>

<ReturnStmt>   ::= RETURN [ <Expression> ] SEMICOLON
<BreakStmt>    ::= BREAK SEMICOLON
<ContinueStmt> ::= CONTINUE SEMICOLON
<ExprStmt>     ::= <Expression> SEMICOLON

<Expression> ::= <Assignment> | <LogicalOr>
<Assignment> ::= <Lvalue> <AssignOp> <Expression>
<Lvalue>     ::= <Postfix>  # Must be semantically an lvalue

<AssignOp> ::= ASSIGN | PLUS_EQ | MINUS_EQ | STAR_EQ | SLASH_EQ | PERCENT_EQ

<LogicalOr>  ::= <LogicalAnd> { OR_OR <LogicalAnd> }
<LogicalAnd> ::= <Equality>  { AND_AND <Equality> }
<Equality>   ::= <Relational> { ( EQ_EQ | BANG_EQ ) <Relational> }
<Relational> ::= <Additive>   { ( LT | GT | LT_EQ | GT_EQ ) <Additive> }
<Additive>       ::= <Multiplicative> { ( PLUS | MINUS ) <Multiplicative> }
<Multiplicative> ::= <Cast> { ( STAR | SLASH | PERCENT ) <Cast> }

<Cast> ::= <Unary> { AS <Type> }

<Unary>   ::= <PrefixOp> <Unary> | <Postfix>
<PrefixOp> ::= PLUS | MINUS | BANG | STAR | AMP | PLUSPLUS | MINUSMINUS

<Postfix> ::= <Primary> { <PostfixOp> }
<PostfixOp> ::= PLUSPLUS | MINUSMINUS
               | L_SQB <Expression> R_SQB
               | LPAREN [ <ArgList> ] RPAREN 
               | DOT IDENTIFIER [ LT <TypeArgs> GT ]
               | <StructLitBody>

<StructLitBody> ::= L_BRACE [ <FieldInits> ] R_BRACE
<FieldInits>    ::= <FieldInit> { COMMA <FieldInit> } [ COMMA ]
<FieldInit>     ::= IDENTIFIER COLON <Expression>

<Primary> ::= INTEGER | FLOAT | BOOLEAN | STRING_LIT | CHAR_LIT | IDENTIFIER
            | LPAREN <Expression> RPAREN
            | <Intrinsic>

<ArgList> ::= (<Expression> | <InitializerList>) { COMMA (<Expression> | <InitializerList>) } [ COMMA ]

<Intrinsic> ::= AT IDENTIFIER LPAREN [ <IntrinsicArgs> ] RPAREN
<IntrinsicArgs> ::= ( <Expression> | <Type> ) { COMMA ( <Expression> | <Type> ) }

<Type>        ::= { STAR } <TypeAtom> { L_SQB [ <Expression> ] R_SQB } { STAR }

<TypeAtom>    ::= <BaseType>
                | <Path>
                | LPAREN <Type> RPAREN
                | <FunctionType>

<BaseType>    ::= I32 | I64 | BOOL | F32 | F64 | STRING | CHAR | VOID

<Path>        ::= IDENTIFIER { DOT IDENTIFIER } [ LT <TypeArgs> GT ]
<TypeArgs>    ::= <Type> { COMMA <Type> }

<FunctionType>  ::= FN LPAREN [ <TypeList> ] RPAREN [ ARROW <Type>]

<TypeList>    ::= <Type> { COMMA <Type> }
